JETcompiler/Tests/bad/bad006.myout
Error while processing expression: Identifier "x" not found, line 2.
